Changed doctype from xhtml to html5 and added html5 shiv to skin and layout file

--- a/app/design/frontend/meanbee/default/layout/local.xml
+++ b/app/design/frontend/meanbee/default/layout/local.xml
@@ -2,6 +2,7 @@
     <default>
         <reference name="head">
             <action method="addItem"><type>skin_css</type><name>css/fonts.css</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/html5shiv.js</name></action>
         </reference>
 
         <remove name="right.permanent.callout" />
