--- a/app/design/frontend/meanbee/default/layout/local.xml
+++ b/app/design/frontend/meanbee/default/layout/local.xml
@@ -3,6 +3,8 @@
         <reference name="head">
             <action method="addItem"><type>skin_css</type><name>css/fonts.css</name></action>
             <action method="addItem"><type>skin_js</type><name>js/html5shiv.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/selectivizr-min.js</action>
+            <action method="addItem"><type>skin_js</type><name>js/prototype.formalize.min.js</name></action>
         </reference>
 
         <remove name="right.permanent.callout" />
