Added basic ARIA roles

--- a/app/design/frontend/meanbee/default/template/page/html/topmenu.phtml
+++ b/app/design/frontend/meanbee/default/template/page/html/topmenu.phtml
@@ -34,8 +34,8 @@
 <?php $_menu = $this->getHtml('level-top') ?>
 <?php if($_menu): ?>
 <div class="nav-container">
-    <ul id="nav">
+    <nav id="nav" role="navigation">
         <?php echo $_menu ?>
-    </ul>
+    </nav>
 </div>
 <?php endif ?>
