--- a/app/design/frontend/meanbee/default/template/page/2columns-right.phtml
+++ b/app/design/frontend/meanbee/default/template/page/2columns-right.phtml
@@ -43,7 +43,7 @@
         <div class="main-container col2-right-layout">
             <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
-                <div class="col-main">
+                <div class="col-main" role="main">
                     <?php echo $this->getChildHtml('global_messages') ?>
                     <?php echo $this->getChildHtml('content') ?>
                 </div>
