Changed nav markup to correct use

--- a/app/design/frontend/meanbee/default/template/page/html/topmenu.phtml
+++ b/app/design/frontend/meanbee/default/template/page/html/topmenu.phtml
@@ -33,9 +33,9 @@
 ?>
 <?php $_menu = $this->getHtml('level-top') ?>
 <?php if($_menu): ?>
-<div class="nav-container">
-    <nav id="nav" role="navigation">
+<nav class="nav-container" role="navigation">
+    <ul id="nav">
         <?php echo $_menu ?>
-    </nav>
-</div>
+    </ul>
+</nav>
 <?php endif ?>
