Added print, styles and fonts css files and fixed layout ending node

--- a/app/design/frontend/meanbee/default/layout/local.xml
+++ b/app/design/frontend/meanbee/default/layout/local.xml
@@ -3,7 +3,7 @@
         <reference name="head">
             <action method="addItem"><type>skin_css</type><name>css/fonts.css</name></action>
             <action method="addItem"><type>skin_js</type><name>js/html5shiv.js</name></action>
-            <action method="addItem"><type>skin_js</type><name>js/selectivizr-min.js</action>
+            <action method="addItem"><type>skin_js</type><name>js/selectivizr-min.js</name></action>
             <action method="addItem"><type>skin_js</type><name>js/prototype.formalize.min.js</name></action>
         </reference>
 
