Removed poll in right column, added clears to scss, added messages and changed their default styles

--- a/app/design/frontend/meanbee/default/layout/local.xml
+++ b/app/design/frontend/meanbee/default/layout/local.xml
@@ -15,6 +15,7 @@
         <remove name="right.permanent.callout" />
 		<remove name="left.permanent.callout" />
 		<remove name="paypal.partner.right.logo" />
+        <remove name="right.poll" />
     </default>
 
     <contacts_index_index>
