--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -1,10 +1,393 @@
 /********** Generic usability/accessibility styles **********/
-label, a, button, select, input[type="submit"] { 
-	cursor: pointer;
-}
-abbr{ cursor: help; }
-textarea{ resize: vertical; }
+label, a, button, select, input[type="submit"] {
+  cursor: pointer; }
+
+abbr {
+  cursor: help; }
+
+textarea {
+  resize: vertical; }
+
 /*::selection,::-moz-selection {  }*/
+html {
+  background: white;
+  color: black;
+  font: 0.75em/1.5 Arial, Helvetica, sans-serif;
+  /* Set base font size here = 12px */
+  overflow-y: scroll; }
 
-html{ overflow-y: scroll; }
+a {
+  color: blue;
+  text-decoration: underline; }
+  a:hover {
+    text-decoration: none; }
 
+/* Headings */
+h1, h2, h3,
+h4, h5, h6 {
+  color: #0a263c;
+  font-weight: bold;
+  line-height: 1.35;
+  margin: 0 0 5px; }
+
+h1 {
+  font-size: 2.667em;
+  font-weight: normal; }
+
+/* = 32px */
+h2 {
+  font-size: 2.167em;
+  font-weight: normal; }
+
+/* = 26px */
+h3 {
+  font-size: 1.833em; }
+
+/* = 22px */
+h4 {
+  font-size: 1.5em; }
+
+/* = 18px */
+h5 {
+  font-size: 1.333em; }
+
+/* = 16px */
+h6 {
+  font-size: 1.167em; }
+
+/* = 14px */
+img {
+  border: 0;
+  vertical-align: top; }
+
+/* Forms */
+form {
+  display: inline; }
+
+fieldset {
+  border: 0; }
+
+/* Table */
+table {
+  border: 0;
+  empty-cells: show;
+  font-size: 100%; }
+
+caption, th, td {
+  vertical-align: top;
+  text-align: left;
+  font-weight: normal; }
+
+/* Tools */
+.hidden {
+  display: block !important;
+  border: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  font-size: 0 !important;
+  line-height: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
+  overflow: hidden !important; }
+
+.nobr {
+  white-space: nowrap !important; }
+
+.wrap {
+  white-space: normal !important; }
+
+.a-left {
+  text-align: left !important; }
+
+.a-center {
+  text-align: center !important; }
+
+.a-right {
+  text-align: right !important; }
+
+.v-top {
+  vertical-align: top; }
+
+.v-middle {
+  vertical-align: middle; }
+
+.f-left,
+.left {
+  float: left !important; }
+
+.f-right,
+.right {
+  float: right !important; }
+
+.f-none {
+  float: none !important; }
+
+.f-fix {
+  float: left;
+  width: 100%; }
+
+.no-display {
+  display: none; }
+
+.no-margin {
+  margin: 0 !important; }
+
+.no-padding {
+  padding: 0 !important; }
+
+.no-bg {
+  background: none !important; }
+
+/* Content */
+p {
+  margin: 0 0 10px; }
+
+strong {
+  font-weight: bold; }
+
+address {
+  font-style: normal;
+  line-height: 1.35; }
+
+cite {
+  font-style: normal; }
+
+q,
+blockquote {
+  quotes: none; }
+
+q:before,
+q:after {
+  content: ''; }
+
+small, big {
+  font-size: 1em; }
+
+/* Remove list styling from certain blocks on site but leave generally */
+ul, ol {
+  margin-left: 30px; }
+
+ul {
+  list-style-type: disc; }
+
+ol {
+  list-style-type: decimal; }
+
+#nav,
+#nav ul,
+header[role="banner"] ul,
+footer[role="contentinfo"] ul,
+.messages,
+.breadcrumbs ul {
+  list-style-type: none;
+  margin-left: 0; }
+
+/* Layout ================================================================================ */
+.wrapper {
+  min-width: 954px; }
+
+.page-print {
+  background: #fff;
+  padding: 25px 30px;
+  text-align: left; }
+
+.page-empty {
+  background: #fff;
+  padding: 20px;
+  text-align: left; }
+
+.page-popup {
+  background: #fff;
+  padding: 25px 30px;
+  text-align: left; }
+
+.main {
+  margin: 0 auto;
+  min-height: 400px;
+  padding: 25px 25px 80px;
+  text-align: left;
+  width: 900px; }
+
+/* Base Columns */
+.col-left {
+  float: left;
+  padding: 0 0 1px;
+  width: 195px; }
+
+.col-main {
+  float: left;
+  padding: 0 0 1px;
+  width: 685px; }
+
+.col-right {
+  float: right;
+  padding: 0 0 1px;
+  width: 195px; }
+
+/* 1 Column Layout */
+.col1-layout .col-main {
+  float: none;
+  width: auto; }
+
+/* 2 Columns Layout */
+.col2-left-layout .col-main {
+  float: right; }
+
+/* 3 Columns Layout */
+.col3-layout .col-main {
+  margin-left: 17px;
+  width: 475px; }
+.col3-layout .col-wrapper {
+  float: left;
+  width: 687px; }
+  .col3-layout .col-wrapper .col-main {
+    float: right; }
+
+/* Content Columns */
+.col2-set .col-1 {
+  float: left;
+  width: 48.5%; }
+.col2-set .col-2 {
+  float: right;
+  width: 48.5%; }
+.col2-set .col-narrow {
+  width: 32%; }
+.col2-set .col-wide {
+  width: 65%; }
+
+.col3-set .col-1 {
+  float: left;
+  width: 32%; }
+.col3-set .col-2 {
+  float: left;
+  margin-left: 2%;
+  width: 32%; }
+.col3-set .col-3 {
+  float: right;
+  width: 32%; }
+
+.col4-set .col-1 {
+  float: left;
+  width: 23.5%; }
+.col4-set .col-2 {
+  float: left;
+  margin: 0 2%;
+  width: 23.5%; }
+.col4-set .col-3 {
+  float: left;
+  width: 23.5%; }
+.col4-set .col-4 {
+  float: right;
+  width: 23.5%; }
+
+/* Global Messages  */
+.success {
+  color: #3d6611;
+  font-weight: bold; }
+
+.error {
+  color: #df280a;
+  font-weight: bold; }
+
+.notice {
+  color: #e26703; }
+
+.messages {
+  overflow: hidden;
+  width: 100%; }
+  .messages ul {
+    list-style: none !important;
+    margin: 0 !important;
+    padding: 0 !important; }
+  .messages li {
+    margin: 0 0 10px !important; }
+  .messages li li {
+    margin: 0 0 3px !important; }
+
+.error-msg,
+.success-msg,
+.note-msg,
+.notice-msg {
+  background-position: 10px 9px !important;
+  background-repeat: no-repeat !important;
+  min-height: 24px !important;
+  padding: 8px 8px 8px 32px !important;
+  font-size: 1em !important;
+  font-weight: bold !important; }
+
+.error-msg {
+  background-color: #D94239;
+  color: #ffffff; }
+
+.success-msg {
+  background-color: #98B95A;
+  color: #ffffff; }
+
+.note-msg,
+.notice-msg {
+  background-color: #F3F7AC;
+  color: #363636; }
+
+/* Clears ================================================================================ */
+.clearer:after,
+.header-container:after,
+.header-container .top-container:after,
+.header:after,
+.header .quick-access:after,
+#nav:after,
+.main:after,
+.footer:after,
+.footer-container .bottom-container:after,
+.col-main:after,
+.col2-set:after,
+.col3-set:after,
+.col3-layout .product-options-bottom .price-box:after,
+.col4-set:after,
+.search-autocomplete li:after,
+.block .block-content:after,
+.block .actions:after,
+.block li.item:after,
+.block-poll li:after,
+.block-layered-nav .currently li:after,
+.page-title:after,
+.products-grid:after,
+.products-list li.item:after,
+.box-account .box-head:after,
+.dashboard .box .box-title:after,
+.box-reviews li.item:after,
+.box-tags li.item:after,
+.pager:after,
+.sorter:after,
+.ratings:after,
+.add-to-box:after,
+.add-to-cart:after,
+.product-essential:after,
+.product-collateral:after,
+.product-view .product-img-box .more-views ul:after,
+.product-view .box-tags .form-add:after,
+.product-view .product-shop .short-description:after,
+.product-view .box-description:after,
+.product-options .options-list li:after,
+.product-options-bottom:after,
+.product-review:after,
+.cart:after,
+.cart-collaterals:after,
+.cart .crosssell li.item:after,
+.opc .step-title:after,
+.checkout-progress:after,
+.multiple-checkout .place-order:after,
+.group-select li:after,
+.form-list li:after,
+.form-list .field:after,
+.buttons-set:after,
+.page-print .print-head:after,
+.advanced-search-summary:after,
+.gift-messages-form .item:after,
+.send-friend .form-list li p:after {
+  display: block;
+  content: ".";
+  clear: both;
+  font-size: 0;
+  line-height: 0;
+  height: 0;
+  overflow: hidden; }
